Fix bounding rect when modifying transform mask applied to a clone layer

We included the offset twice by taking parentLayer->projection() into
account.

BUG:436892